--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -245,9 +245,9 @@
 			<a class="home colorize" href="#" style="float: left; margin-right: 5%;">
 				<span class="common-BodyTitle";>Nyhetsrum</span>
 			</a>
-			<a class="home colorize" href="../blogg/index.html">
+			<!-- <a class="home colorize" href="../blogg/index.html">
 				<span class="common-BodyTitle">Besiktningsbloggen</span>
-			</a>
+			</a> -->
 		</div>
 	</nav>
 	<!-- HEADER -->
