--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -181,11 +181,6 @@
 
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="hero-title">Besiktningstjänster för privatpersoner</h1>
-						<div class="announcement white">
-		          <span class="new-pill">OBS</span>
-		          <span class="message left">Uppdatering</span>
-						</div>
-						<p>För att ytterligare förstärka servicen i vår kärnverksamhet,<br> kommersiell besiktning av nyproduktion och ROT, <br> har vi f.r.o.m 26/8 2019 valt att avsluta besiktningar åt konsument.</p>
 					</div>
 
 				</div>
@@ -193,7 +188,7 @@
 		</div>
 		<div class="background" style="background-image:url(../../assets/img/backgrounds/summer/summer_house.jpg)" alt="Fritidshus på svenska västkusten"></div>
 	</section>
-	<!-- <section class="slide whiteSlide autoHeight" id="privat-offer">
+	<section class="slide whiteSlide autoHeight" id="privat-offer">
 		<div class="container">
 			<div class="container-lg">
 				<div class="fix-10-12 margin-top-1">
@@ -499,85 +494,67 @@
 								</ul>
 							</div>
 						</div>
-
-					</div>
-					<div class="fix-10-12">
-						<h2 class="common-BodyTitle">Som exempel på ovan beskrivna besiktningstjänster kan nämnas:</h2>
-						<p class="common-BodyText">
-							• Målningsbesiktningar
-							<br> • Badrumsbesiktningar-råyta-tätskikt-färdigställt
-							<br> • Tvättstugebesiktningar
-							<br> • Köksbesiktningar
-							<br> • Dörrar-säkerhetsbesiktningar
-							<br> • Fönsterbesiktningar-balkongdörrar-personlig säkerhet
-							<br> • Stambesiktningar
-							<br> • Takbesiktningar-plåt-papp-tegel-solceller
-							<br> • Fasadbesiktningar
-							<br> • Stuprör
-							<br> • Mark-dränering-stödmurar
-							<br> • Lekplatsbesiktningar
-							<br> • Utemiljö; buskar, träd, parkeringsytor, cykelställ, gräsytor, asfaltsytor
-							<br> • Sedumtak-grönatak
-							<br> • Innergårdar
-							<br> • Garage-portar
-							<br> • Hiss
-							<br> • Sprinklers
-							<br> • Sopsugsbesiktning
-							<br> • Utomhusbelysning-laddstolpar
-							<br> • Balkongbesiktningar
-							<br> • Gårdshus-återvinning-källsortering
-						</p>
 					</div>
 				</div>
 			</div>
 		</section>
 
 	</section>
-	<section class="slide white form-section">
-		<div class="margin-0 center">
-			<div class="announcement">
-				<span class="new-pill">OBS</span>
-				<span class="message left">
-						Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.
-				</span>
-			</div>
-		</div>
+	<section class="slide form-section" data-name="boka" name="boka" data-title="boka" id="bokaprivat"
+		style="background: #f6f9fc;">
 		<div class="container-lg">
-				<div class="formBackground form-column">
-					<div class="inactive-Overlay"></div>
-						<h3 class="pad-header margin-0 text-blueGrey center">
-							Redo att boka?
-							<p class="small bold dark margin-0 common-BodyText" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
-						</h3>
-						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-hide-footer=true style="width: 100%; height: 400px;"></div>
-						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-
-				</div>
-				<div class="secondary-column">
-
-					<div class="customers">
-						<p class="copy-1">Du är i gott sällskap.</p>
-						<p class="copy-2">Gör som många andra och anlita Besiktningsman.se</p>
-						<ul class="customer-logos">
-							<li class="customer-logo">
-								<img src="../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
-							</li>
-
-							<li class="customer-logo">
-								<img src="../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
-							</li>
-							<li class="customer-logo">
-								<img src="../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
-							</li>
-							<li class="customer-logo">
-								<img src="../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
-							</li>
-						</ul>
+			<div class="pad formBackground form-column">
+				<h3 class="pad-header margin-0 common-BodyTitle2 center">
+					Intresserad? Kontakta oss för att komma igång.
+					<p class="common-BodyText margin-0 padding-0">
+						Lämna ett meddelande så
+						hör vi av oss.
+					</p>
+				</h3>
+				<div>
+					<div class="form-bg-offset">
+						<!--[if lte IE 8]>
+						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+						<![endif]-->
+						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+						<script>
+						hbspt.forms.create({
+							region: "na1",
+							portalId: "4367163",
+							formId: "4fd692bf-45ea-4073-917e-27babc4a081f"
+						});
+						</script>
 					</div>
+					<footer></footer>
 				</div>
+			</div>
+			<div class="secondary-column">
+				<div class="customers">
+					<p class="copy-1 common-BodyTitle">Du är i gott sällskap.</p>
+					<p class="copy-2 common-BodyText">Gör som många andra och anlita Besiktningsman.se</p>
+					<ul class="customer-logos">
+						<li class="customer-logo">
+							<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
+						</li>
+						<!-- <li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
+							</li> -->
+						<li class="customer-logo">
+							<img src="../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
+						</li>
+						<li class="customer-logo">
+							<img src="../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC"
+								style="padding-bottom: 15px;">
+						</li>
+						<li class="customer-logo">
+							<img src="../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
+						</li>
+					</ul>
+				</div>
+			</div>
 
 		</div>
-	</section> -->
+	</section>
 <!-- Footer -->
 <section class="slide customFooter autoHeight">
 	<div class="content">
