--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
                         <ul>
                             <li><a href="tjanster/entreprenad/" class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
                             <li><a href="tjanster/brf/" class="common-Button text-blue fromCenter margin-bottom-1">BRF</a></li>
-                            <li><a href="konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
+                            <li><a href="tjanster/privat/" class="common-Button text-blue fromCenter margin-bottom-1">Privat</a></li>
+                            <!-- <li><a href="konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li> -->
                             <!-- <li><a href="utbildning/" class="common-Button text-blue fromCenter margin-bottom-1">Besiktningsutbildarna</a></li> -->
                         </ul>
                         <a href="tel:0101654000" id="mobilePhoneNumber">
@@ -539,10 +540,19 @@
                             <li class="col-6-12 left cell-32">
                                 <h2 class="common-IntroText">Besiktningstjänster för privatpersoner</h2>
                                 <h3 class="common-BodyTitle">Småhus, lägenheter och fritidshus</h3>
-                                <div class="announcement">
-                                    <span class="new-pill">OBS</span>
+                                <div class="section-Links">
+                                    <a href="tjanster/privat/">
+                                        <p class="common-BodyTitle2 margin-bottom-1">Läs mer om våra tjänster</p>
+                                        <p class="common-Link">Gå till tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
+                                    </a>
+                                    <p class="common-BodyTitle2">Redo att boka? Hör gärna av dig så hjälper vi till!</p>
+                                    <a class="common-Button blue text-white margin-bottom-2" href="tjanster/privat/#bokaprivat">
+										Lämna ett meddelande
+									</a>
+                                    <a href="tel:0101654000">
+                                        <p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+                                    </a>
                                 </div>
-                                <p class="common-BodyText">För att ytterligare förstärka servicen i vår kärnverksamhet, kommersiell besiktning av nyproduktion och ROT, har vi f.r.o.m 26/8 2019 valt att avsluta besiktningar åt konsument.</p>
                                 <li class="col-6-12 left fromRight">
                                     <img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/summer/summer_house.jpg" alt="Traditionellt sommarhus i svenska skärgården" />
                                 </li>
