--- a/SPG/index.html
+++ b/SPG/index.html
@@ -2,7 +2,7 @@
 <html lang="se">
 
 <head>
-	<title>Besiktningsman.se | Skanska</title>
+	<title>Besiktningsman.se | SPG</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -265,19 +265,19 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<img src="../assets/img/logos/spg_logo.png" alt="SPG"
+						<img src="../assets/img/logos/spg_logo.png" alt="spg"
 							style="max-width: 320px; width: 100%;color: #fff;" class="margin-bottom-2" />
 						<h1 class="common-IntroText text-white">
 							Välkommen till er personliga avropssida
 						</h1>
-						<a href="../SPG/boka/index.html" class="common-Button text-blue">boka besiktning
+						<a href="../spg/boka/index.html" class="common-Button text-blue">boka besiktning
 						</a>
 					</div>
 
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../assets/img/backgrounds/SPG_background.jpg)"
+		<div class="background" style="background-image:url(../assets/img/backgrounds/spg_background.jpg)"
 			alt="Foto av ett snöigt innerstockholm" style="min-height: 600px;"></div>
 	</section>
 	<section class="slide whiteSlide kenBurns" id="">
@@ -333,7 +333,7 @@
 						</li>
 					</ul>
 					<p class="common-BodyTitle">Det enda ni behöver göra är att fylla i ett enkelt avrop!</p>
-					<a class="common-Button blue text-white margin-bottom-10" href="../SPG/">Fyll i avrop
+					<a class="common-Button blue text-white margin-bottom-10" href="../spg/boka/index.html">Fyll i avrop
 						här</a>
 				</div>
 			</div>
