Blog "activated" again

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -245,6 +245,9 @@
 			<a class="home colorize" href="#" style="float: left; margin-right: 5%;">
 				<span class="common-BodyTitle";>Nyhetsrum</span>
 			</a>
+			<a class="home colorize" href="../blogg" style="float: left; margin-right: 5%;">
+				<span class="common-BodyTitle";>Blogg</span>
+			</a>
 			<!-- <a class="home colorize" href="../blogg/index.html">
 				<span class="common-BodyTitle">Besiktningsbloggen</span>
 			</a> -->
@@ -255,7 +258,7 @@
 		<div class="container-xl">
 			<span class="featured-article">
 				<div class="featured-article-image">
-					<a href="https://besiktningsman.se/blogg/?p=titania-tecknar-avtal-med-besiktningsman-se"><img src="../assets/img/backgrounds/small-Titania.gif" alt="Abstract shapes"></a>
+					<img src="../assets/img/backgrounds/small-Titania.gif" alt="Abstract shapes">
 				</div>
 				<div class="featured-article-content">
 					<h2 class="featured-article-title">
@@ -265,8 +268,7 @@
 						Avtalet omfattar en heltäckande besiktningsgrupp som samarbetar 
 						med projektet i plattformen iSpect. I iSpect får Titania spårbarhet i projektet. 
 						Med statistik bland annat på vanligaste byggfelen, genomsnittlig avhjälpningstid 
-						och missade egenkontroller. <a href="https://besiktningsman.se/blogg/?p=titania-tecknar-avtal-med-besiktningsman-se">
-						<p class="text-blue">Läs mer här</p>
+						och missade egenkontroller.
 						</a>
 					</h3>
 				</div>
