update om oss ceo bm

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -246,10 +246,10 @@
 						<!--  List one -->
 						<ul class="flex fixedSpaces later left margin-bottom-5">
 							<li class="col-3-12">
-								<h3 class="common-BodyTitle">Magnus Janson</h3>
+								<h3 class="common-BodyTitle">Ylva Åkerblom</h3>
 								<p class="common-BodyText">VD & styrelseordförande</p>
-								<a href="mailto:magnus.janson@besiktningsman.se">
-									<p class="common-Link">magnus.janson@besiktningsman.se</p>
+								<a href="mailto:ylva.akerblom@besiktningsman.se">
+									<p class="common-Link">ylva.akerblom@besiktningsman.se</p>
 								</a>
 							</li>
 							<li class="col-3-12">
