contacts > update company list

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -471,8 +471,8 @@
 								<li class="col-3-12">
 									<h3 class="common-BodyTitle">Magnus Janson</h3>
 									<p class="common-BodyText">VD</p>
-									<a href="mailto:magnus.janson@besiktningsman.se">
-										<p class="common-Link">magnus.janson@besiktningsman.se</p>
+									<a href="mailto:ylva.akerblom@besiktningsman.se">
+										<p class="common-Link">ylva.akerblom@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
@@ -502,13 +502,13 @@
 								</li>
 							</ul>
 							<!--  Sales / Marketing -->
-							<h2 class="common-IntroText">Sälj & Marknad</h2>
+							<h2 class="common-IntroText">Sälj</h2>
 							<ul class="flex fixedSpaces later left margin-bottom-5">
 								<li class="col-3-12">
-									<h3>Maximilian Rostov</h3>
-									<p class="common-BodyText">Marknadsansvarig</p>
-									<a href="mailto:max.rostov@besiktningsman.se">
-										<p class="common-Link">max.rostov@besiktningsman.se</p>
+									<h3>Mohammed Fathi</h3>
+									<p class="common-BodyText">Sälj</p>
+									<a href="mailto:mohammed.fathi@besiktningsman.se">
+										<p class="common-Link">mohammed.fathi@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
@@ -541,13 +541,6 @@
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:carl.gistrand@besiktningsman.se">
 										<p class="common-Link">carl.gistrand@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Charlie Höglund</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:charlie.hoglund@besiktningsman.se">
-										<p class="common-Link">charlie.hoglund@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
@@ -639,13 +632,6 @@
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:mats-erik@besiktningsman.se">
 										<p class="common-Link">mats-erik@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Olof Johansson</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:olof@besiktningsman.se">
-										<p class="common-Link">olof@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
