contacts list adjusted

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -454,28 +454,29 @@
 							<h2 class="common-IntroText">Ledning</h2>
 							<!--  List one -->
 							<ul class="flex fixedSpaces later left margin-bottom-5">
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
+									<h3 class="common-BodyTitle">Ylva Åkerblom</h3>
+									<p class="common-BodyText">VD</p>
+									<a href="mailto:ylva.akerblom@besiktningsman.se">
+										<p class="common-Link">ylva.akerblom@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12 margin-right-2">
 									<h3 class="common-BodyTitle">Björn Selling</h3>
 									<p class="common-BodyText">Affärschef</p>
 									<a href="mailto:bjorn@besiktningsman.se">
 										<p class="common-Link">bjorn@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3 class="common-BodyTitle">Marie Selling</h3>
 									<p class="common-BodyText">Projekt & Ekonomichef</p>
 									<a href="mailto:marie@besiktningsman.se">
 										<p class="common-Link">marie@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
-									<h3 class="common-BodyTitle">Magnus Janson</h3>
-									<p class="common-BodyText">VD</p>
-									<a href="mailto:ylva.akerblom@besiktningsman.se">
-										<p class="common-Link">ylva.akerblom@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
+
+								<li class="col-3-12 margin-right-2">
 									<h3 class="common-BodyTitle">Robert Lindbom</h3>
 									<p class="common-BodyText">Besiktningschef</p>
 									<a href="mailto:robert@besiktningsman.se">
@@ -486,14 +487,14 @@
 							<!--  employees -->
 							<h2 class="common-IntroText">Projektavdelning</h2>
 							<ul class="flex fixedSpaces later left margin-bottom-5">
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Linnea Ståhl</h3>
 									<p class="common-BodyText">Projektansvarig</p>
 									<a href="mailto:linnea.stahl@besiktningsman.se">
 										<p class="common-Link">linnea.stahl@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Pernilla Midell</h3>
 									<p class="common-BodyText">Projektansvarig</p>
 									<a href="mailto:pernilla.midell@besiktningsman.se">
@@ -504,14 +505,14 @@
 							<!--  Sales / Marketing -->
 							<h2 class="common-IntroText">Sälj</h2>
 							<ul class="flex fixedSpaces later left margin-bottom-5">
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Mohammed Fathi</h3>
 									<p class="common-BodyText">Sälj</p>
 									<a href="mailto:mohammed.fathi@besiktningsman.se">
 										<p class="common-Link">mohammed.fathi@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Yones Sadaghiani</h3>
 									<p class="common-BodyText">Säljchef</p>
 									<a href="mailto:yones@besiktningsman.se">
@@ -522,189 +523,189 @@
 							<!--  inspectors -->
 							<h2 class="common-IntroText">Besiktningsmän</h2>
 							<ul class="flex fixedSpaces later left margin-bottom-5">
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Andre Hamzo</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:andre.hamzo@besiktningsman.se">
 										<p class="common-Link">andre.hamzo@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Anders Holmström</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:anders.holmstrom@besiktningsman.se">
 										<p class="common-Link">anders.holmstrom@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Carl Gistrand</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:carl.gistrand@besiktningsman.se">
 										<p class="common-Link">carl.gistrand@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>David Collin</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:david.collin@projektsopsug.se">
 										<p class="common-Link">david.collin@projektsopsug.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Dan Jakobsson</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:dan@besiktningsman.se">
 										<p class="common-Link">dan@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Fredrik Lundgren</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:fredrik.lundgren@besiktningsman.se">
 										<p class="common-Link">fredrik.lundgren@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Göran Svensson</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:goran@besiktningsman.se">
 										<p class="common-Link">goran@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Jeanette Immo</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:jeanette@besiktningsman.se">
 										<p class="common-Link">jeanette@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Karl-Fredrik Olsson</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:karl-fredrik@besiktningsman.se">
 										<p class="common-Link">karl-fredrik@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Leif Berg</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:leif.berg@besiktningsman.se">
 										<p class="common-Link">leif.berg@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Lasse Grandahl</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:lasse@besiktningsman.se">
 										<p class="common-Link">lasse@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Leo Simic</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:leo@besiktningsman.se">
 										<p class="common-Link">leo@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Mathias Wussow</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:mathias@besiktningsman.se">
 										<p class="common-Link">mathias@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Magnus Engström</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:magnus.engstrom@besiktningsman.se">
 										<p class="common-Link">magnus.engstrom@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Michael Stenman</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:michael.stenman@besiktningsman.se">
 										<p class="common-Link">michael.stenman@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Mats-Erik Hybinette</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:mats-erik@besiktningsman.se">
 										<p class="common-Link">mats-erik@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Olof Andersson</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:olof.andersson@besiktningsman.se">
 										<p class="common-Link">olof.andersson@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Patrik Johansen</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:patrik.johansen@besiktningsman.se">
 										<p class="common-Link">patrik.johansen@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Robert Lindbom</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:robert@besiktningsman.se">
 										<p class="common-Link">robert@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Staffan Tjulander</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:staffan.tjulander@besiktningsman.se">
 										<p class="common-Link">staffan.tjulander@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Sanharib Safar</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:safar@besiktningsman.se">
 										<p class="common-Link">safar@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Thomas Karlsson</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:thomas.karlsson@besiktningsman.se">
 										<p class="common-Link">thomas.karlsson@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Thorbjörn Grundström</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:thorbjorn@besiktningsman.se">
 										<p class="common-Link">thorbjorn@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Tom Maurell</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:tom.maurell@besiktningsman.se">
 										<p class="common-Link">tom.maurell@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Thomas Karlsson</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:thomas.karlsson@besiktningsman.se">
 										<p class="common-Link">thomas.karlsson@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Ulf Johansson</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:ulf@besiktningsman.se">
 										<p class="common-Link">ulf@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12">
+								<li class="col-3-12 margin-right-2">
 									<h3>Örjan Höglund</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:orjan@besiktningsman.se">
