adding in the banner across pages + minor fixes

--- a/ispect/index.html
+++ b/ispect/index.html
@@ -155,6 +155,20 @@
 	</svg>
     <!-- Panel Top #10 -->
     <nav class="panel top forceMobileView white soft-shadow">
+		<!-- covid/flu-season banner -->
+		<div class="mb-2 covid-banner" style="">
+			<div class="text-white text-center margin-0-auto" style="">
+	
+							<div class="center margin-0-auto covid-banner-text" style="">
+									<div class="common-BodyTextSm text-white text-center" style="padding: 0;">        
+											Besiktningsman.se arbetar enligt dom rådande covid-restriktioner som regeringen har fastställt. 
+											
+									</div>
+									<div class="common-BodyTextSm text-white dialogTrigger popupTrigger margin-left-2" data-dialog-id="popup" data-popup-id="dialog">Läs mer här</div>
+							</div>
+	
+				</div>
+		</div>
         <!-- left menu nav -->
         <div class="sections desktop">
             <div class="left">
