class for popup body text

--- a/gdpr_policy.html
+++ b/gdpr_policy.html
@@ -222,11 +222,7 @@
                                     </button>
                                 </div>
                                 <div>
-                                    <div class="form-bg-offset px-3" style="max-height: 640px;
-                                    height: 100%;
-                                    overflow-y: scroll;
-                                    text-align: left;
-                                    line-height: normal;">
+                                    <div class="form-bg-offset px-3 banner-popup-body">
                                         <h4>Title</h4>
                                         <p>
                                             The swerving is itself an arbitrary fiction; for Epicurus says the atoms swerve without a cause, yet this is the capital offence in a natural philosopher, to speak of something taking place uncaused. Publius Scaevola and Manius Manilius upholding one opinion and Marcus Brutus the contrary (not but what such discussions raise nice points of law, as well as being of practical importance for the business of life; and we read and shall continue to read with pleasure the treatises in question and others of the same nature).
