kontakt > personnel list updated

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -240,7 +240,7 @@
     <!-- Panel Top #10 -->
     <nav class="panel top forceMobileView white soft-shadow">
 		<!-- covid/flu-season banner -->
-		<div class="mb-2 covid-banner" style="">
+		<!-- <div class="mb-2 covid-banner" style="">
 			<div class="text-white text-center margin-0-auto" style="">
 	
 							<div class="center margin-0-auto covid-banner-text" style="">
@@ -252,7 +252,7 @@
 							</div>
 	
 				</div>
-		</div>
+		</div> -->
 
 		<div class="sections desktop">
 			<div class="left">
@@ -531,11 +531,11 @@
 			<section class="slide whiteSlide margin-bottom-5 margin-top-1" id="team" data-name="team">
 				<div class="container-lg">
 					<div class="wrap left">
-						<div class="fix-10-12">
+						<div class="fix-12-12">
 							<h2 class="common-IntroText">Ledning</h2>
 							<!--  List one -->
 							<ul class="flex fixedSpaces later left margin-bottom-5">
-								<li class="col-3-12 margin-right-2">
+								<li class="col-5-12 margin-right-2 margin-bottom-2">
 									<h3 class="common-BodyTitle">Ylva Åkerblom</h3>
 									<p class="common-BodyText">VD</p>
 									<a href="mailto:ylva.akerblom@besiktningsman.se">
@@ -543,7 +543,7 @@
 									</a>
 									<a href="tel:010-1654015" class="text-blue-600 font-md">Telefon: 010-1654015</a>
 								</li>
-								<li class="col-3-12 margin-right-2">
+								<li class="col-5-12 margin-right-2 margin-bottom-2">
 									<h3 class="common-BodyTitle">Björn Selling</h3>
 									<p class="common-BodyText">Affärschef</p>
 									<a href="mailto:bjorn@besiktningsman.se">
@@ -551,7 +551,7 @@
 										<a href="tel:010-1654005" class="text-blue-600 font-md">Telefon: 010-1654005</a>
 									</a>
 								</li>
-								<li class="col-3-12 margin-right-2">
+								<li class="col-5-12 margin-right-2 margin-bottom-2">
 									<h3 class="common-BodyTitle">Marie Selling</h3>
 									<p class="common-BodyText">Projekt & Ekonomichef</p>
 									<a href="mailto:marie@besiktningsman.se">
@@ -597,10 +597,10 @@
 									</a>
 								</li>
 								<li class="col-3-12 margin-right-2">
-									<h3>Yones Sadaghiani</h3>
-									<p class="common-BodyText">Säljchef</p>
-									<a href="mailto:yones@besiktningsman.se">
-										<p class="common-Link">yones@besiktningsman.se</p>
+									<h3>Joakim Carpfelt</h3>
+									<p class="common-BodyText">Sälj</p>
+									<a href="mailto:joakim.carpfelt@besiktningsman.se">
+										<p class="common-Link">joakim.carpfelt@besiktningsman.se</p>
 									</a>
 								</li>
 							</ul>
@@ -608,10 +608,10 @@
 							<h2 class="common-IntroText">Besiktningsmän</h2>
 							<ul class="flex fixedSpaces later left margin-bottom-5">
 								<li class="col-3-12 margin-right-2">
-									<h3>Andre Hamzo</h3>
+									<h3>Thomas Jäghammar </h3>
 									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:andre.hamzo@besiktningsman.se">
-										<p class="common-Link">andre.hamzo@besiktningsman.se</p>
+									<a href="mailto:thomas.jaghammar@besiktningsman.se">
+										<p class="common-Link">thomas.jaghammar@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12 margin-right-2">
@@ -733,13 +733,7 @@
 										<p class="common-Link">patrik.johansen@besiktningsman.se</p>
 									</a>
 								</li>
-								<li class="col-3-12 margin-right-2">
-									<h3>Robert Lindbom</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:robert@besiktningsman.se">
-										<p class="common-Link">robert@besiktningsman.se</p>
-									</a>
-								</li>
+
 								<li class="col-3-12 margin-right-2">
 									<h3>Staffan Tjulander</h3>
 									<p class="common-BodyText">Besiktningsman</p>
